--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.11",
+    "mapbox-gl": "^0.49.0",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -37,6 +38,7 @@
     "react": "^16.5.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
+    "react-mapbox-gl": "^3.9.2",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "semantic-ui-css": "^2.3.3",
