--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -43,6 +46,7 @@
     "resolve": "1.6.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.5",
+    "socket.io-client": "^2.1.1",
     "sw-precache-webpack-plugin": "0.11.4",
     "sweetalert": "^2.1.0",
     "url-loader": "0.6.2",
